--- a/style.css
+++ b/style.css
@@ -5,10 +5,10 @@ body {
 
 /* Tag selector to select all 'div' elements. We only have one 'div' in our HTML */
 div {
-  width: 700px
-  margin: auto
-  font-family: "Helvetica Neue"
-  background-color: : white
+  width: 700px;
+  margin: auto;
+  font-family: "Helvetica Neue";
+  background-color: : white;
   padding: 30px
   
 }
